[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/LevelProgress.gd" id="1"]

[node name="LevelProgress" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.15, 0.2, 1)

[node name="RouteMap" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0

[node name="LevelButtonTemplate" type="Button" parent="RouteMap"]
text = "Level"
visible = false

[node name="ResultPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="ResultPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="ResultTitle" type="Label" parent="ResultPanel/VBoxContainer"]
text = "Level Complete!"
horizontal_alignment = 1
vertical_alignment = 1
custom_minimum_size = Vector2(0, 80)
theme_override_font_sizes/font_size = 36

[node name="ScoreLabel" type="Label" parent="ResultPanel/VBoxContainer"]
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 24

[node name="TargetLabel" type="Label" parent="ResultPanel/VBoxContainer"]
text = "Target: 0"
horizontal_alignment = 1
vertical_alignment = 1
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 20

[node name="MovesLabel" type="Label" parent="ResultPanel/VBoxContainer"]
text = "Moves Left: 0"
horizontal_alignment = 1
vertical_alignment = 1
custom_minimum_size = Vector2(0, 40)
theme_override_font_sizes/font_size = 20

[node name="Spacer" type="Control" parent="ResultPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)

[node name="NextLevelButton" type="Button" parent="ResultPanel/VBoxContainer"]
text = "Next Level"
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 24

[node name="RestartButton" type="Button" parent="ResultPanel/VBoxContainer"]
text = "Restart Level"
custom_minimum_size = Vector2(0, 60)
theme_override_font_sizes/font_size = 24
visible = false

[node name="MenuButton" type="Button" parent="ResultPanel/VBoxContainer"]
text = "Main Menu"
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 20
